package org.example;

import java.awt.*;

public interface Bouncable {
    void draw();
    void move();
    Color getColor();
    Shape getShape();
}
